--- a/AdGuardHome.yaml
+++ b/AdGuardHome.yaml
@@ -2,11 +2,11 @@ http:
   pprof:
     port: 6060
     enabled: false
-  address: 0.0.0.0:80
+  address: 0.0.0.0:8080
   session_ttl: 720h
 users:
-  - name: xxxxxx
-    password: xxxxxxxxxxxxxx
+  - name: xxxxx
+    password: xxxxxxxxxxxxxxxxxxxxxxxxxx
 auth_attempts: 5
 block_auth_min: 15
 http_proxy: ""
@@ -23,16 +23,21 @@ dns:
   ratelimit_whitelist: []
   refuse_any: true
   upstream_dns:
-    - https://dns.google/dns-query
-    - https://dns11.quad9.net/dns-query
-    - '[/drive.usercontent.google.com/]https://dns.google/dns-query'
-    - '[/googlevideo.com/]https://dns.google/dns-query'
-    - '[/nflxvideo.net/]https://dns.google/dns-query'
+    - 8.8.8.8
+    - 8.8.4.4
+    - 9.9.9.11
+    - 149.112.112.11
+    - 208.67.222.123
+    - 208.67.220.123
+    - 208.67.222.2
+    - 208.67.220.2
+    - 208.67.222.222
+    - 208.67.220.220
   upstream_dns_file: ""
   bootstrap_dns:
-    - 1.1.1.1
+    - 8.8.8.8
   fallback_dns:
-    - 1.1.1.1
+    - 8.8.8.8
   upstream_mode: parallel
   fastest_timeout: 1s
   allowed_clients: []
@@ -44,7 +49,6 @@ dns:
   trusted_proxies:
     - 127.0.0.0/8
     - ::1/128
-    - 172.16.0.0/12
   cache_enabled: true
   cache_size: 134217728
   cache_ttl_min: 60
@@ -54,7 +58,7 @@ dns:
   aaaa_disabled: true
   enable_dnssec: false
   edns_client_subnet:
-    custom_ip: 103.92.24.0
+    custom_ip: 103.111.244.0
     enabled: true
     use_custom: false
   max_goroutines: 300
@@ -64,7 +68,7 @@ dns:
   bootstrap_prefer_ipv6: false
   upstream_timeout: 10s
   private_networks: []
-  use_private_ptr_resolvers: false
+  use_private_ptr_resolvers: true
   local_ptr_upstreams: []
   use_dns64: false
   dns64_prefixes: []
@@ -75,56 +79,51 @@ dns:
   pending_requests:
     enabled: true
 tls:
-  enabled: true
-  server_name: dns.bibica.net
+  enabled: false
+  server_name: ""
   force_https: false
   port_https: 443
-  port_dns_over_tls: 0
-  port_dns_over_quic: 0
+  port_dns_over_tls: 853
+  port_dns_over_quic: 853
   port_dnscrypt: 0
   dnscrypt_config_file: ""
   allow_unencrypted_doh: true
   certificate_chain: ""
   private_key: ""
-  certificate_path: /caddy_data/caddy/certificates/acme-v02.api.letsencrypt.org-directory/dns.bibica.net/dns.bibica.net.crt
-  private_key_path: /caddy_data/caddy/certificates/acme-v02.api.letsencrypt.org-directory/dns.bibica.net/dns.bibica.net.key
+  certificate_path: ""
+  private_key_path: ""
   strict_sni_check: false
 querylog:
   dir_path: ""
   ignored: []
   interval: 2160h
   size_memory: 1000
-  enabled: false
-  file_enabled: false
+  enabled: true
+  file_enabled: true
 statistics:
   dir_path: ""
   ignored: []
-  interval: 2160h
-  enabled: false
+  interval: 24h
+  enabled: true
 filters:
   - enabled: true
     url: https://adguardteam.github.io/HostlistsRegistry/assets/filter_1.txt
     name: AdGuard DNS filter
-    id: 1760036846
+    id: 1
   - enabled: true
     url: https://adguardteam.github.io/HostlistsRegistry/assets/filter_16.txt
     name: 'VNM: ABPVN List'
-    id: 1760036847
+    id: 1760268201
   - enabled: true
     url: https://raw.githubusercontent.com/bibicadotnet/AdGuard-Home-blocklists/refs/heads/main/byme.txt
     name: CocCoc & MSN Domains
-    id: 1760036848
-  - enabled: true
-    url: https://raw.githubusercontent.com/VeleSila/yhosts/master/hosts
-    name: China
-    id: 1760090197
+    id: 1760268202
 whitelist_filters:
   - enabled: true
     url: https://raw.githubusercontent.com/bibicadotnet/AdGuard-Home-blocklists/refs/heads/main/whitelist.txt
     name: Allowlist
-    id: 1760036849
-user_rules:
-  - ""
+    id: 1760268203
+user_rules: []
 dhcp:
   enabled: false
   interface_name: ""
@@ -147,7 +146,7 @@ filtering:
   blocking_ipv6: ""
   blocked_services:
     schedule:
-      time_zone: UTC
+      time_zone: Local
     ids: []
   protection_disabled_until: null
   safe_search:
@@ -162,17 +161,9 @@ filtering:
   blocking_mode: default
   parental_block_host: family-block.dns.adguard.com
   safebrowsing_block_host: standard-block.dns.adguard.com
-  rewrites:
-    - domain: medium.com
-      answer: rocket.net
-    - domain: '*.medium.com'
-      answer: rocket.net
-    - domain: bibica.net
-      answer: rocket.net
-    - domain: edge.bibica.net
-      answer: rocket.net
+  rewrites: []
   safe_fs_patterns:
-    - /opt/adguardhome/work/userfilters/*
+    - /opt/AdGuardHome/userfilters/*
   safebrowsing_cache_size: 1048576
   safesearch_cache_size: 1048576
   parental_cache_size: 1048576
@@ -192,11 +183,11 @@ clients:
     hosts: true
   persistent: []
 log:
-  enabled: false
+  enabled: true
   file: ""
   max_backups: 0
-  max_size: 0
-  max_age: 0
+  max_size: 100
+  max_age: 3
   compress: false
   local_time: false
   verbose: false
