--- a/compose.yml
+++ b/compose.yml
@@ -4,26 +4,28 @@ services:
     container_name: caddy
     restart: always
     networks:
-      - reverse_proxy
+      reverse_proxy:
+        ipv4_address: 172.18.0.2
     volumes:
       - ./Caddyfile:/etc/caddy/Caddyfile
       - ./caddy_data:/data
       - ./caddy_config:/config
     environment:
-      - CLOUDFLARE_API_TOKEN=xxxxxxxxxxxxxxxxxxxxx
+      - CLOUDFLARE_API_TOKEN=XXXXXXXXXXXXXXXXXXXXXXXX
     ports:
       - 80:80
       - 443:443
       - 443:443/udp
     logging:
       driver: "none"
-
+      
   adguardhome:
     image: adguard/adguardhome
     container_name: adguardhome
     restart: always
     networks:
-      - reverse_proxy
+      reverse_proxy:
+        ipv4_address: 172.18.0.3
     volumes:
       - ./adguard/work:/opt/adguardhome/work
       - ./adguard/config:/opt/adguardhome/conf
@@ -32,5 +34,9 @@ services:
 
 networks:
   reverse_proxy:
-    driver: "bridge"
+    driver: bridge
     name: reverse_proxy
+    ipam:
+      driver: default
+      config:
+        - subnet: 172.18.0.0/16
