--- a/AdGuardHome.yaml
+++ b/AdGuardHome.yaml
@@ -25,20 +25,18 @@ dns:
   upstream_dns:
     - https://8.8.4.4/dns-query
     - https://8.8.8.8/dns-query
-    - https://9.9.9.11/dns-query
-    - https://149.112.112.11/dns-query    
-    - '# Github'
-    - '[/github.com/]https://1.1.1.1/dns-query'
-    - '[/githubcopilot.com/]https://1.1.1.1/dns-query'
-    - '[/githubusercontent.com/]https://1.1.1.1/dns-query'
-    - '[/github-cloud.s3.amazonaws.com/]https://1.1.1.1/dns-query'
-    - '[/githubassets.com/]https://1.1.1.1/dns-query'
+    - '[/nikke-en.com/]https://dns.mullvad.net/dns-query'
+    - '[/github.com/]https://dns.mullvad.net/dns-query'
+    - '[/githubcopilot.com/]https://dns.mullvad.net/dns-query'
+    - '[/githubusercontent.com/]https://dns.mullvad.net/dns-query'
+    - '[/github-cloud.s3.amazonaws.com/]https://dns.mullvad.net/dns-query'
+    - '[/githubassets.com/]https://dns.mullvad.net/dns-query'
   upstream_dns_file: ""
   bootstrap_dns:
-    - 1.1.1.1
+    - 8.8.4.4
     - 8.8.8.8
   fallback_dns:
-    - https://1.1.1.1/dns-query
+    - https://9.9.9.11/dns-query
   upstream_mode: parallel
   fastest_timeout: 1s
   allowed_clients: []
@@ -125,7 +123,8 @@ whitelist_filters:
     url: https://raw.githubusercontent.com/bibicadotnet/AdGuard-Home-blocklists/refs/heads/main/whitelist.txt
     name: Allowlist
     id: 1760504975
-user_rules: []
+user_rules:
+  - ""
 dhcp:
   enabled: false
   interface_name: ""
@@ -153,13 +152,13 @@ filtering:
   protection_disabled_until: null
   safe_search:
     enabled: false
-    bing: true
-    duckduckgo: true
-    ecosia: true
-    google: true
-    pixabay: true
-    yandex: true
-    youtube: true
+    bing: false
+    duckduckgo: false
+    ecosia: false
+    google: false
+    pixabay: false
+    yandex: false
+    youtube: false
   blocking_mode: default
   parental_block_host: family-block.dns.adguard.com
   safebrowsing_block_host: standard-block.dns.adguard.com
@@ -193,7 +192,7 @@ log:
   file: ""
   max_backups: 0
   max_size: 0
-  max_age: 0 
+  max_age: 0
   compress: false
   local_time: false
   verbose: false
