--- a/compose.yml
+++ b/compose.yml
@@ -29,6 +29,9 @@ services:
     volumes:
       - ./adguard/work:/opt/adguardhome/work
       - ./adguard/config:/opt/adguardhome/conf
+    ports:
+      - 53:53/tcp
+      - 53:53/udp
     logging:
       driver: "none"
 
