--- a/3_direct_AdGuardHome.yaml
+++ b/3_direct_AdGuardHome.yaml
@@ -23,7 +23,6 @@ dns:
   ratelimit_whitelist: []
   refuse_any: true
   upstream_dns:
-    - https://8.8.4.4/dns-query
     - https://8.8.8.8/dns-query
     - '[/nikke-en.com/]https://dns.mullvad.net/dns-query'
     - '[/github.com/]https://dns.mullvad.net/dns-query'
@@ -33,11 +32,12 @@ dns:
     - '[/githubassets.com/]https://dns.mullvad.net/dns-query'
   upstream_dns_file: ""
   bootstrap_dns:
-    - 149.112.112.11
+    - 9.9.9.9
     - 8.8.8.8
+    - 1.1.1.1
   fallback_dns:
-    - https://8.8.8.8/dns-query
-  upstream_mode: load_balance
+    - https://8.8.4.4/dns-query
+  upstream_mode: parallel
   fastest_timeout: 1s
   allowed_clients: []
   disallowed_clients: []
@@ -49,7 +49,7 @@ dns:
     - 127.0.0.0/8
     - ::1/128
   cache_enabled: true
-  cache_size: 134217728
+  cache_size: 524288000
   cache_ttl_min: 0
   cache_ttl_max: 0
   cache_optimistic: true
@@ -122,7 +122,8 @@ whitelist_filters:
     url: https://raw.githubusercontent.com/bibicadotnet/AdGuard-Home-blocklists/refs/heads/main/whitelist.txt
     name: Allowlist
     id: 1760504975
-user_rules: []
+user_rules:
+  - ""
 dhcp:
   enabled: false
   interface_name: ""
@@ -163,8 +164,10 @@ filtering:
   rewrites:
     - domain: medium.com
       answer: bibica.net
+      enabled: true
     - domain: '*.medium.com'
       answer: bibica.net
+      enabled: true
   safe_fs_patterns:
     - /home/AdGuardHome/userfilters/*
   safebrowsing_cache_size: 1048576
@@ -174,6 +177,7 @@ filtering:
   filters_update_interval: 24
   blocked_response_ttl: 10
   filtering_enabled: true
+  rewrites_enabled: true
   parental_enabled: false
   safebrowsing_enabled: false
   protection_enabled: true
@@ -193,9 +197,9 @@ log:
   max_age: 0
   compress: false
   local_time: false
-  verbose: false
+  verbose: true
 os:
   group: ""
   user: ""
   rlimit_nofile: 0
-schema_version: 30
+schema_version: 31
