--- a/3_direct_AdGuardHome.yaml
+++ b/3_direct_AdGuardHome.yaml
@@ -87,8 +87,8 @@ dns:
     - '[/awsstatic.com/]https://8.8.8.8/dns-query'
     - '[/awswaf.com/]https://8.8.8.8/dns-query'
     - '[/amazon.ca/]https://8.8.8.8/dns-query'
-    - '[/co.jp/]https://8.8.8.8/dns-query'
-    - '[/co.uk/]https://8.8.8.8/dns-query'
+    - '[/amazon.co.jp/]https://8.8.8.8/dns-query'
+    - '[/amazon.co.uk/]https://8.8.8.8/dns-query'
     - '[/amazon.com/]https://8.8.8.8/dns-query'
     - '[/amazon.de/]https://8.8.8.8/dns-query'
     - '[/amazon.es/]https://8.8.8.8/dns-query'
