Change DNS queries to use 8.8.8.8
Updated DNS queries to use 8.8.8.8 instead of 208.67.222.222 for various domains.

--- a/3_direct_AdGuardHome.yaml
+++ b/3_direct_AdGuardHome.yaml
@@ -33,16 +33,17 @@ dns:
     - '[/githubusercontent.com/]https://dns.mullvad.net/dns-query'
     - '[/github-cloud.s3.amazonaws.com/]https://dns.mullvad.net/dns-query'
     - '[/githubassets.com/]https://dns.mullvad.net/dns-query'
-    - '[/ibytedtos.com/]https://208.67.222.222/dns-query'
-    - '[/tiktokcdn.com/]https://208.67.222.222/dns-query'
-    - '[/tiktokcdn-eu.com/]https://208.67.222.222/dns-query'
-    - '[/tiktok.com/]https://208.67.222.222/dns-query'
-    - '[/tiktokv.com/]https://208.67.222.222/dns-query'
-    - '[/ttwstatic.com/]https://208.67.222.222/dns-query'
-    - '[/bilibili.com/]https://208.67.220.220/dns-query'
-    - '[/bilivideo.com/]https://208.67.220.220/dns-query'
-    - '[/fastly.net/]https://208.67.222.222/dns-query'
-    - '[/fastlylb.net/]https://208.67.222.222/dns-query'
+    - '[/ibytedtos.com/]https://8.8.8.8/dns-query'
+    - '[/tiktokcdn.com/]https://8.8.8.8/dns-query'
+    - '[/tiktokcdn-eu.com/]https://8.8.8.8/dns-query'
+    - '[/tiktok.com/]https://8.8.8.8/dns-query'
+    - '[/tiktokv.com/]https://8.8.8.8/dns-query'
+    - '[/ttwstatic.com/]https://8.8.8.8/dns-query'
+    - '[/bilibili.com/]https://8.8.8.8/dns-query'
+    - '[/bilivideo.com/]https://8.8.8.8/dns-query'
+    - '[/biligame.com/]https://8.8.8.8/dns-query'
+    - '[/fastly.net/]https://8.8.8.8/dns-query'
+    - '[/fastlylb.net/]https://8.8.8.8/dns-query'
     - '# All CDN'
     - '[/1and1.com/]https://8.8.8.8/dns-query'
     - '[/1und1.de/]https://8.8.8.8/dns-query'
@@ -61,9 +62,10 @@ dns:
     - '[/pix-cdn.org/]https://8.8.8.8/dns-query'
     - '[/abmr.net/]https://8.8.8.8/dns-query'
     - '[/akamai.net/]https://8.8.8.8/dns-query'
+    - '[/akamaized.net/]https://8.8.8.8/dns-query'
     - '[/akamaitechnologies.com/]https://8.8.8.8/dns-query'
     - '[/akamaihd.net/]https://8.8.8.8/dns-query'
-    - '[/akamaized.net/]https://8.8.8.8/dns-query'
+    - '[/akadns.net/]https://8.8.8.8/dns-query'
     - '[/akstat.io/]https://8.8.8.8/dns-query'
     - '[/edgekey.net/]https://8.8.8.8/dns-query'
     - '[/edgesuite.net/]https://8.8.8.8/dns-query'
@@ -299,11 +301,11 @@ dns:
     - '[/noaa.gov/]https://8.8.8.8/dns-query'
     - '[/nativeroll.tv/]https://8.8.8.8/dns-query'
     - '[/pstatic.net/]https://8.8.8.8/dns-query'
-    - '[/netflix.com/]https://208.67.222.222/dns-query'
-    - '[/nflxext.com/]https://208.67.222.222/dns-query'
-    - '[/nflximg.net/]https://208.67.222.222/dns-query'
-    - '[/nflxso.net/]https://208.67.222.222/dns-query'
-    - '[/nflxvideo.net/]https://208.67.222.222/dns-query'
+    - '[/netflix.com/]https://8.8.8.8/dns-query'
+    - '[/nflxext.com/]https://8.8.8.8/dns-query'
+    - '[/nflximg.net/]https://8.8.8.8/dns-query'
+    - '[/nflxso.net/]https://8.8.8.8/dns-query'
+    - '[/nflxvideo.net/]https://8.8.8.8/dns-query'
     - '[/nt.vc/]https://8.8.8.8/dns-query'
     - '[/nice264.com/]https://8.8.8.8/dns-query'
     - '[/oghub.io/]https://8.8.8.8/dns-query'
@@ -353,10 +355,10 @@ dns:
     - '[/schneevonmorgen.com/]https://8.8.8.8/dns-query'
     - '[/svonm.com/]https://8.8.8.8/dns-query'
     - '[/scribblelive.com/]https://8.8.8.8/dns-query'
-    - '[/shopify.com/]https://208.67.222.222/dns-query'
-    - '[/shopifycdn.com/]https://208.67.222.222/dns-query'
-    - '[/shopifysvc.com/]https://208.67.222.222/dns-query'
-    - '[/shopifycloud.com/]https://208.67.222.222/dns-query'
+    - '[/shopify.com/]https://8.8.8.8/dns-query'
+    - '[/shopifycdn.com/]https://8.8.8.8/dns-query'
+    - '[/shopifysvc.com/]https://8.8.8.8/dns-query'
+    - '[/shopifycloud.com/]https://8.8.8.8/dns-query'
     - '[/shortnews.de/]https://8.8.8.8/dns-query'
     - '[/shutterstock.com/]https://8.8.8.8/dns-query'
     - '[/similardeals.net/]https://8.8.8.8/dns-query'
@@ -635,7 +637,7 @@ dns:
     - '[/ztat.net/]https://8.8.8.8/dns-query'
     - '[/zmctrack.net/]https://8.8.8.8/dns-query'
     - '[/zog.link/]https://8.8.8.8/dns-query'
-    - '[/zukxd6fkxqn.com/]https://8.8.8.8/dns-query'  
+    - '[/zukxd6fkxqn.com/]https://8.8.8.8/dns-query'
   upstream_dns_file: ""
   bootstrap_dns:
     - 9.9.9.9
