Refactor AdGuardHome configuration and DNS entries
Removed unused HTTP settings and user credentials. Updated DNS entries for various domains.

--- a/3_direct_AdGuardHome.yaml
+++ b/3_direct_AdGuardHome.yaml
@@ -7,15 +7,6 @@ http:
 users:
   - name: username_xxxxxxx
     password: password_xxxxxxx
-http:
-  pprof:
-    port: 6060
-    enabled: false
-  address: 0.0.0.0:8080
-  session_ttl: 720h
-users:
-  - name: bibica
-    password: $2y$10$mFUcdQ8JZSH8O71rSsgY2.jmms7xZa7HhJQAFIwcS5tgaPf5VZrnu
 auth_attempts: 5
 block_auth_min: 15
 http_proxy: ""
@@ -37,28 +28,129 @@ dns:
     - '[/bibica.net/]https://dns.mullvad.net/dns-query'
     - '[/voz.vn/]https://dns.mullvad.net/dns-query'
     - '[/nikke-en.com/]https://dns.mullvad.net/dns-query'
-    - '[/github.io/]https://dns.mullvad.net/dns-query'
     - '[/github.com/]https://dns.mullvad.net/dns-query'
     - '[/githubcopilot.com/]https://dns.mullvad.net/dns-query'
     - '[/githubusercontent.com/]https://dns.mullvad.net/dns-query'
     - '[/github-cloud.s3.amazonaws.com/]https://dns.mullvad.net/dns-query'
     - '[/githubassets.com/]https://dns.mullvad.net/dns-query'
-    - '[/ibytedtos.com/]https://8.8.8.8/dns-query'
-    - '[/tiktokcdn.com/]https://8.8.8.8/dns-query'
-    - '[/tiktokcdn-eu.com/]https://8.8.8.8/dns-query'
-    - '[/tiktok.com/]https://8.8.8.8/dns-query'
-    - '[/tiktokv.com/]https://8.8.8.8/dns-query'
-    - '[/ttwstatic.com/]https://8.8.8.8/dns-query'
-    - '[/douyin.com/]https://8.8.8.8/dns-query'
-    - '[/douyinpic.com/]https://8.8.8.8/dns-query'
-    - '[/douyinvod.com/]https://8.8.8.8/dns-query'
-    - '[/bilibili.com/]https://8.8.8.8/dns-query'
-    - '[/biliimg.com/]https://8.8.8.8/dns-query'
-    - '[/bilivideo.com/]https://8.8.8.8/dns-query'
-    - '[/biligame.com/]https://8.8.8.8/dns-query'
+    - '# DNS Việt Nam nextDNS'
+    - '[/upos-hz-mirrorakam.akamaized.net/]https://lightnode-sgn-1.edge.nextdns.io/646191'
+    - '[/v16-webapp-prime.tiktok.com/]https://lightnode-sgn-1.edge.nextdns.io/646191'
+    - '[/goatembed.com/]https://lightnode-sgn-1.edge.nextdns.io/646191'
+    - '[/sunraycloud64.online/]https://lightnode-sgn-1.edge.nextdns.io/646191'
+    - '[/jwpltx.com/]https://lightnode-sgn-1.edge.nextdns.io/646191'
+    - '[/rophimapi.net/]https://lightnode-sgn-1.edge.nextdns.io/646191'
+    - '[/www.rophim.li/]https://lightnode-sgn-1.edge.nextdns.io/646191'
+    - '[/static.nutscdn.com/]https://lightnode-sgn-1.edge.nextdns.io/646191'
+    - '[/image.tmdb.org/]https://lightnode-sgn-1.edge.nextdns.io/646191'
+    - '[/bing.com/]https://lightnode-sgn-1.edge.nextdns.io/646191'
+    - '[/apple.com/]https://lightnode-sgn-1.edge.nextdns.io/646191'
+    - '[/cdn-apple.com/]https://lightnode-sgn-1.edge.nextdns.io/646191'
+    - '[/apple-dns.net/]https://lightnode-sgn-1.edge.nextdns.io/646191'
+    - '[/aaplimg.com/]https://lightnode-sgn-1.edge.nextdns.io/646191'
+    - '[/sharepoint.com/]https://lightnode-sgn-1.edge.nextdns.io/646191'
+    - '[/live.com/]https://lightnode-sgn-1.edge.nextdns.io/646191'
+    - '[/windows.net/]https://lightnode-sgn-1.edge.nextdns.io/646191'
+    - '[/windowsupdate.com/]https://lightnode-sgn-1.edge.nextdns.io/646191'
+    - '[/microsoft.com/]https://lightnode-sgn-1.edge.nextdns.io/646191'
+    - '[/microsoftonline-p.com/]https://lightnode-sgn-1.edge.nextdns.io/646191'
+    - '[/microsoftonline.com/]https://lightnode-sgn-1.edge.nextdns.io/646191'
+    - '[/microsofttranslator.com/]https://lightnode-sgn-1.edge.nextdns.io/646191'
+    - '[/office.com/]https://lightnode-sgn-1.edge.nextdns.io/646191'
+    - '[/office.net/]https://lightnode-sgn-1.edge.nextdns.io/646191'
+    - '[/office365.com/]https://lightnode-sgn-1.edge.nextdns.io/646191'
+    - '[/msedge.net/]https://lightnode-sgn-1.edge.nextdns.io/646191'
+    - '[/msocdn.com/]https://lightnode-sgn-1.edge.nextdns.io/646191'
+    - '[/onestore.ms/]https://lightnode-sgn-1.edge.nextdns.io/646191'
+    - '[/s-microsoft.com/]https://lightnode-sgn-1.edge.nextdns.io/646191'
+    - '[/office.net/]https://lightnode-sgn-1.edge.nextdns.io/646191'
+    - '[/avcdn.net/]https://lightnode-sgn-1.edge.nextdns.io/646191'
+    - '[/ibytedtos.com/]https://lightnode-sgn-1.edge.nextdns.io/646191'
+    - '[/tiktokcdn.com/]https://lightnode-sgn-1.edge.nextdns.io/646191'
+    - '[/tiktokcdn-eu.com/]https://lightnode-sgn-1.edge.nextdns.io/646191'
+    - '[/tiktok.com/]https://lightnode-sgn-1.edge.nextdns.io/646191'
+    - '[/tiktokv.com/]https://lightnode-sgn-1.edge.nextdns.io/646191'
+    - '[/ttwstatic.com/]https://lightnode-sgn-1.edge.nextdns.io/646191'
+    - '[/douyin.com/]https://lightnode-sgn-1.edge.nextdns.io/646191'
+    - '[/douyinpic.com/]https://lightnode-sgn-1.edge.nextdns.io/646191'
+    - '[/douyinvod.com/]https://lightnode-sgn-1.edge.nextdns.io/646191'
+    - '[/zjcdn.com/]https://lightnode-sgn-1.edge.nextdns.io/646191'
+    - '[/ndcpp.com/]https://lightnode-sgn-1.edge.nextdns.io/646191'
+    - '[/byteimg.com/]https://lightnode-sgn-1.edge.nextdns.io/646191'
+    - '[/bytetos.com/]https://lightnode-sgn-1.edge.nextdns.io/646191'
+    - '[/douyinstatic.com/]https://lightnode-sgn-1.edge.nextdns.io/646191'
+    - '[/bytescm.com/]https://lightnode-sgn-1.edge.nextdns.io/646191'
+    - '[/bytedance.com/]https://lightnode-sgn-1.edge.nextdns.io/646191'
+    - '[/feelgood.cn/]https://lightnode-sgn-1.edge.nextdns.io/646191'
+    - '[/ibytedapm.com/]https://lightnode-sgn-1.edge.nextdns.io/646191'
+    - '[/bytednsdoc.com/]https://lightnode-sgn-1.edge.nextdns.io/646191'
+    - '[/bilibili.com/]https://lightnode-sgn-1.edge.nextdns.io/646191'
+    - '[/biliimg.com/]https://lightnode-sgn-1.edge.nextdns.io/646191'
+    - '[/bilivideo.com/]https://lightnode-sgn-1.edge.nextdns.io/646191'
+    - '[/biligame.com/]https://lightnode-sgn-1.edge.nextdns.io/646191'
+    - '[/alidns.com/]https://lightnode-sgn-1.edge.nextdns.io/646191'
+    - '[/bilicdn2.com/]https://lightnode-sgn-1.edge.nextdns.io/646191'
+    - '[/hdslb.com/]https://lightnode-sgn-1.edge.nextdns.io/646191'
+    - '[/alicdn.com/]https://lightnode-sgn-1.edge.nextdns.io/646191'
+    - '[/akamai.net/]https://lightnode-sgn-1.edge.nextdns.io/646191'
+    - '[/akamaized.net/]https://lightnode-sgn-1.edge.nextdns.io/646191'
+    - '[/akamaitechnologies.com/]https://lightnode-sgn-1.edge.nextdns.io/646191'
+    - '[/akamaihd.net/]https://lightnode-sgn-1.edge.nextdns.io/646191'
+    - '[/akadns.net/]https://lightnode-sgn-1.edge.nextdns.io/646191'
+    - '[/akstat.io/]https://lightnode-sgn-1.edge.nextdns.io/646191'
+    - '[/edgekey.net/]https://lightnode-sgn-1.edge.nextdns.io/646191'
+    - '[/edgesuite.net/]https://lightnode-sgn-1.edge.nextdns.io/646191'
+    - '[/netflix.com/]https://lightnode-sgn-1.edge.nextdns.io/646191'
+    - '[/nflxext.com/]https://lightnode-sgn-1.edge.nextdns.io/646191'
+    - '[/nflximg.net/]https://lightnode-sgn-1.edge.nextdns.io/646191'
+    - '[/nflxso.net/]https://lightnode-sgn-1.edge.nextdns.io/646191'
+    - '[/nflxvideo.net/]https://lightnode-sgn-1.edge.nextdns.io/646191'
+    - '[/cloudfront.net/]https://lightnode-sgn-1.edge.nextdns.io/646191'
+    - '[/vncdn.net/]https://lightnode-sgn-1.edge.nextdns.io/646191'
+    - '[/vncdn.com/]https://lightnode-sgn-1.edge.nextdns.io/646191'
+    - '[/vncdn.vn/]https://lightnode-sgn-1.edge.nextdns.io/646191'
+    - '[/edgenext.net/]https://lightnode-sgn-1.edge.nextdns.io/646191'
+    - '[/edgenextcdn.com/]https://lightnode-sgn-1.edge.nextdns.io/646191'
+    - '[/ccgslb.com/]https://lightnode-sgn-1.edge.nextdns.io/646191'
+    - '[/ccgslb.net/]https://lightnode-sgn-1.edge.nextdns.io/646191'
+    - '[/ccgslb.org/]https://lightnode-sgn-1.edge.nextdns.io/646191'
+    - '[/cdnetworks.com/]https://lightnode-sgn-1.edge.nextdns.io/646191'
+    - '[/cdnetworks.net/]https://lightnode-sgn-1.edge.nextdns.io/646191'
+    - '[/cncss.net/]https://lightnode-sgn-1.edge.nextdns.io/646191'
+    - '[/cdngc.net/]https://lightnode-sgn-1.edge.nextdns.io/646191'
+    - '[/susercontent.com/]https://lightnode-sgn-1.edge.nextdns.io/646191'
+    - '[/iana.org/]https://lightnode-sgn-1.edge.nextdns.io/646191'
+    - '[/garena.com/]https://lightnode-sgn-1.edge.nextdns.io/646191'
+    - '[/disneyplus.com/]https://lightnode-sgn-1.edge.nextdns.io/646191'
+    - '[/msftncsi.com/]https://lightnode-sgn-1.edge.nextdns.io/646191'
+    - '[/disneyplus.com/]https://lightnode-sgn-1.edge.nextdns.io/646191'
+    - '[/capcutapi.com/]https://lightnode-sgn-1.edge.nextdns.io/646191'
+    - '[/capcut.com/]https://lightnode-sgn-1.edge.nextdns.io/646191'
+    - '[/capcutcdn-us.com/]https://lightnode-sgn-1.edge.nextdns.io/646191'
+    - '[/capcutstatic.com/]https://lightnode-sgn-1.edge.nextdns.io/646191'
+    - '[/lencr.org/]https://lightnode-sgn-1.edge.nextdns.io/646191'
+    - '[/bmcdn.me/]https://lightnode-sgn-1.edge.nextdns.io/646191'
+    - '[/ibyteimg.com/]https://lightnode-sgn-1.edge.nextdns.io/646191'
+    - '[/nelreports.net/]https://lightnode-sgn-1.edge.nextdns.io/646191'
+    - '[/pipopay.com/]https://lightnode-sgn-1.edge.nextdns.io/646191'
+    - '[/mzstatic.com/]https://lightnode-sgn-1.edge.nextdns.io/646191'
+    - '[/shopeemobile.com/]https://lightnode-sgn-1.edge.nextdns.io/646191'
+    - '[/capcutvod.com/]https://lightnode-sgn-1.edge.nextdns.io/646191'
+    - '[/onedrive.com/]https://lightnode-sgn-1.edge.nextdns.io/646191'
+    - '[/shopee.vn/]https://lightnode-sgn-1.edge.nextdns.io/646191'
+    - '[/ttdns2.com/]https://lightnode-sgn-1.edge.nextdns.io/646191'
+    - '[/avast.com/]https://lightnode-sgn-1.edge.nextdns.io/646191'
+    - '[/byteeffecttos-g.com/]https://lightnode-sgn-1.edge.nextdns.io/646191'
+    - '[/gravatar.com/]https://lightnode-sgn-1.edge.nextdns.io/646191'
+    - '[/sfx.ms/]https://lightnode-sgn-1.edge.nextdns.io/646191'
+    - '[/faceueditor.com/]https://lightnode-sgn-1.edge.nextdns.io/646191'
+    - '[/adobedtm.com/]https://lightnode-sgn-1.edge.nextdns.io/646191'
+    - '[/digicert.com/]https://lightnode-sgn-1.edge.nextdns.io/646191'
+    - '[/cloud.microsoft/]https://lightnode-sgn-1.edge.nextdns.io/646191'
+    - '[/xxxx.com/]https://lightnode-sgn-1.edge.nextdns.io/646191'
+    - '# All CDN'
     - '[/fastly.net/]https://8.8.8.8/dns-query'
     - '[/fastlylb.net/]https://8.8.8.8/dns-query'
-    - '# All CDN'
     - '[/1and1.com/]https://8.8.8.8/dns-query'
     - '[/1und1.de/]https://8.8.8.8/dns-query'
     - '[/uicdn.com/]https://8.8.8.8/dns-query'
@@ -75,17 +167,8 @@ dns:
     - '[/ahcdn.com/]https://8.8.8.8/dns-query'
     - '[/pix-cdn.org/]https://8.8.8.8/dns-query'
     - '[/abmr.net/]https://8.8.8.8/dns-query'
-    - '[/akamai.net/]https://8.8.8.8/dns-query'
-    - '[/akamaized.net/]https://8.8.8.8/dns-query'
-    - '[/akamaitechnologies.com/]https://8.8.8.8/dns-query'
-    - '[/akamaihd.net/]https://8.8.8.8/dns-query'
-    - '[/akadns.net/]https://8.8.8.8/dns-query'
-    - '[/akstat.io/]https://8.8.8.8/dns-query'
-    - '[/edgekey.net/]https://8.8.8.8/dns-query'
-    - '[/edgesuite.net/]https://8.8.8.8/dns-query'
     - '[/imiclk.com/]https://8.8.8.8/dns-query'
     - '[/alibaba.com/]https://8.8.8.8/dns-query'
-    - '[/alicdn.com/]https://8.8.8.8/dns-query'
     - '[/allegroimg.com/]https://8.8.8.8/dns-query'
     - '[/allegrostatic.com/]https://8.8.8.8/dns-query'
     - '[/allegrostatic.pl/]https://8.8.8.8/dns-query'
@@ -94,7 +177,6 @@ dns:
     - '[/images-amazon.com/]https://8.8.8.8/dns-query'
     - '[/media-amazon.com/]https://8.8.8.8/dns-query'
     - '[/ssl-images-amazon.com/]https://8.8.8.8/dns-query'
-    - '[/cloudfront.net/]https://8.8.8.8/dns-query'
     - '[/aiv-cdn.net/]https://8.8.8.8/dns-query'
     - '[/amazonaws.com/]https://8.8.8.8/dns-query'
     - '[/amazonwebservices.com/]https://8.8.8.8/dns-query'
@@ -119,7 +201,6 @@ dns:
     - '[/autoscout24.net/]https://8.8.8.8/dns-query'
     - '[/adspdbl.com/]https://8.8.8.8/dns-query'
     - '[/avocet.io/]https://8.8.8.8/dns-query'
-    - '[/windows.net/]https://8.8.8.8/dns-query'
     - '[/azmk8s.io/]https://8.8.8.8/dns-query'
     - '[/azure-api.net/]https://8.8.8.8/dns-query'
     - '[/azure-mobile.net/]https://8.8.8.8/dns-query'
@@ -145,8 +226,6 @@ dns:
     - '[/bpcdn.net/]https://8.8.8.8/dns-query'
     - '[/bpsecure.com/]https://8.8.8.8/dns-query'
     - '[/bildstatic.de/]https://8.8.8.8/dns-query'
-    - '[/bilicdn2.com/]https://8.8.8.8/dns-query'
-    - '[/hdslb.com/]https://8.8.8.8/dns-query'
     - '[/blau.de/]https://8.8.8.8/dns-query'
     - '[/blogfoster.com/]https://8.8.8.8/dns-query'
     - '[/bwbx.io/]https://8.8.8.8/dns-query'
@@ -298,15 +377,6 @@ dns:
     - '[/msn.com/]https://8.8.8.8/dns-query'
     - '[/s-msn.com/]https://8.8.8.8/dns-query'
     - '[/gfx.ms/]https://8.8.8.8/dns-query'
-    - '[/live.com/]https://8.8.8.8/dns-query'
-    - '[/microsoft.com/]https://8.8.8.8/dns-query'
-    - '[/microsoftonline-p.com/]https://8.8.8.8/dns-query'
-    - '[/microsoftonline.com/]https://8.8.8.8/dns-query'
-    - '[/microsofttranslator.com/]https://8.8.8.8/dns-query'
-    - '[/msedge.net/]https://8.8.8.8/dns-query'
-    - '[/msocdn.com/]https://8.8.8.8/dns-query'
-    - '[/onestore.ms/]https://8.8.8.8/dns-query'
-    - '[/s-microsoft.com/]https://8.8.8.8/dns-query'
     - '[/trouter.io/]https://8.8.8.8/dns-query'
     - '[/devappgrant.space/]https://8.8.8.8/dns-query'
     - '[/fonts.net/]https://8.8.8.8/dns-query'
@@ -319,11 +389,6 @@ dns:
     - '[/noaa.gov/]https://8.8.8.8/dns-query'
     - '[/nativeroll.tv/]https://8.8.8.8/dns-query'
     - '[/pstatic.net/]https://8.8.8.8/dns-query'
-    - '[/netflix.com/]https://8.8.8.8/dns-query'
-    - '[/nflxext.com/]https://8.8.8.8/dns-query'
-    - '[/nflximg.net/]https://8.8.8.8/dns-query'
-    - '[/nflxso.net/]https://8.8.8.8/dns-query'
-    - '[/nflxvideo.net/]https://8.8.8.8/dns-query'
     - '[/nt.vc/]https://8.8.8.8/dns-query'
     - '[/nice264.com/]https://8.8.8.8/dns-query'
     - '[/oghub.io/]https://8.8.8.8/dns-query'
@@ -569,9 +634,6 @@ dns:
     - '[/o2online.de/]https://8.8.8.8/dns-query'
     - '[/oclasrv.com/]https://8.8.8.8/dns-query'
     - '[/octapi.net/]https://8.8.8.8/dns-query'
-    - '[/office.com/]https://8.8.8.8/dns-query'
-    - '[/office.net/]https://8.8.8.8/dns-query'
-    - '[/office365.com/]https://8.8.8.8/dns-query'
     - '[/ocdn.eu/]https://8.8.8.8/dns-query'
     - '[/onet.pl/]https://8.8.8.8/dns-query'
     - '[/pageanalytics.space/]https://8.8.8.8/dns-query'
@@ -750,6 +812,7 @@ whitelist_filters:
     name: Allowlist
     id: 1760504975
 user_rules:
+  - '||www.163.com^$client=''14.191.0.0'''
   - ""
 dhcp:
   enabled: false
@@ -837,14 +900,8 @@ filtering:
     - domain: upos-sz-mirror08h.bilivideo.com
       answer: upos-sz-mirrorcosov.bilivideo.com
       enabled: true
-    - domain: upos-hz-mirrorakam.akamaized.net
-      answer: upos-sz-mirrorcosov.bilivideo.com
-      enabled: true
     - domain: upos-sz-staticcos-cmask.bilivideo.com
       answer: upos-sz-mirrorcosov.bilivideo.com
-      enabled: true
-    - domain: v16-webapp-prime.tiktok.com
-      answer: v19-webapp-prime.tiktok.com
       enabled: true
     - domain: v16-webapp-prime.us.tiktok.com
       answer: v19-webapp-prime.tiktok.com
